// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DescriptionPageTest  /> Renders DescriptionPageTest component 1`] = `
<ErrorBoundary>
  <React.Fragment>
    Loading...
  </React.Fragment>
</ErrorBoundary>
`;

exports[`<DescriptionPageTest  /> Renders DescriptionPageTest component snapshot2 1`] = `
<ErrorBoundary>
  <React.Fragment>
    <PageNotFound />
  </React.Fragment>
</ErrorBoundary>
`;
